added make file
